RESOLVED FIXED159654
Deleting in a text input inside an iframe causes the page to scroll incorrectly
https://bugs.webkit.org/show_bug.cgi?id=159654
Summary Deleting in a text input inside an iframe causes the page to scroll incorrectly
Simon Fraser (smfr)
Reported 2016-07-11 16:24:38 PDT
Deleting in a text input inside an iframe causes the page to scroll incorrectly
Attachments
Patch (5.80 KB, patch)
2016-07-11 16:26 PDT, Simon Fraser (smfr)
zalan: review+
Simon Fraser (smfr)
Comment 1 2016-07-11 16:26:07 PDT
Simon Fraser (smfr)
Comment 2 2016-07-11 16:26:37 PDT
Simon Fraser (smfr)
Comment 3 2016-07-11 17:53:58 PDT
Note You need to log in before you can comment on or make changes to this bug.