Deleting in a text input inside an iframe causes the page to scroll incorrectly https://bugs.webkit.org/show_bug.cgi?id=159654 rdar://problem/26805722

Reviewed by Zalan Bujtas.

Source/WebCore:

Editor::revealSelectionAfterEditingOperation() needs the same iOS-specific reveal
behavior as was added for typing in r202295.

Test: fast/forms/ios/delete-in-input-in-iframe.html

* editing/Editor.cpp:
(WebCore::Editor::revealSelectionAfterEditingOperation):

LayoutTests:

* fast/forms/ios/delete-in-input-in-iframe-expected.txt: Added.
* fast/forms/ios/delete-in-input-in-iframe.html: Added.

Canonical link: https://commits.webkit.org/177803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203097 268f45cc-cd09-0410-ab3c-d52691b4dbfc